force-app/main/default/objects/Grants__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>IA Internal Review</fullName>
            </value>
            <value>
                <fullName>Screening committee review</fullName>
            </value>
            <value>
                <fullName>Peer review</fullName>
            </value>
            <value>
                <fullName>Interview committee review</fullName>
            </value>
            <value>
                <fullName>Declined at IA Stage</fullName>
            </value>
            <value>
                <fullName>Declined at Screening committee stage</fullName>
            </value>
            <value>
                <fullName>Declined at interview committee stage</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>