force-app/main/default/objects/Grants__c/fields/Reviewers_and_Restrictions_Justification__c.field-meta.xml
<CustomField>
    <fullName>Reviewers_and_Restrictions_Justification__c</fullName>
    <label>Reviewers and Restrictions Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>