force-app/main/default/objects/Grants__c/fields/Risks_of_research_misuse__c.field-meta.xml
<CustomField>
    <fullName>Risks_of_research_misuse__c</fullName>
    <label>Risks of research misuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>