force-app/main/default/objects/Grants__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Grants</relationshipLabel>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>