force-app/main/default/objects/Grants__c/fields/SDGs_Description__c.field-meta.xml
<CustomField>
    <fullName>SDGs_Description__c</fullName>
    <label>SDGs Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>