force-app/main/default/objects/Grants__c/fields/Staff_Member__c.field-meta.xml
<CustomField>
    <fullName>Staff_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>