force-app/main/default/objects/Grants__c/fields/Strategy_and_Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Strategy_and_Work_Plan__c</fullName>
    <label>Strategy and Work Plan</label>
    <type>TextArea</type>
</CustomField>