force-app/main/default/objects/Grants__c/fields/Sustainable_Development_Goals__c.field-meta.xml
<CustomField>
    <fullName>Sustainable_Development_Goals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sustainable Development Goals</label>
    <type>Checkbox</type>
</CustomField>