force-app/main/default/objects/Grants__c/fields/Team_Science_Grant_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Team_Science_Grant_Proposal__c</fullName>
    <label>Team Science Grant Proposal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>