force-app/main/default/objects/Grants__c/fields/Timelines__c.field-meta.xml
<CustomField>
    <fullName>Timelines__c</fullName>
    <inlineHelpText>A Gantt chart showing key stages of the research plans, indicating the location and timelines. Since more than one organisation will be involved in the project, please specify the work that will be undertaken at each organisation.This chart should be plan</inlineHelpText>
    <label>Timelines</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>