force-app/main/default/objects/Grants__c/fields/Training_and_mentorship_plan__c.field-meta.xml
<CustomField>
    <fullName>Training_and_mentorship_plan__c</fullName>
    <label>Training and mentorship plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>