force-app/main/default/objects/Grants__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Investigator</fullName>
            </value>
            <value>
                <fullName>Co-Principal Investigator (1)</fullName>
            </value>
            <value>
                <fullName>Co-Principal Investigator (2)</fullName>
            </value>
            <value>
                <fullName>Co-Principal Investigator (3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>