force-app/main/default/objects/Grants__c/fields/Undertaking_Statement__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_Statement__c</fullName>
    <inlineHelpText>The commitment/contribution that the host institution(s) agree to make to this project (Limit 500 words) beyond usual support for space and utilities.</inlineHelpText>
    <label>Undertaking Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>