force-app/main/default/objects/Grants__c/fields/Undertakings_from_all_the_participating__c.field-meta.xml
<CustomField>
    <fullName>Undertakings_from_all_the_participating__c</fullName>
    <inlineHelpText>Undertakings from all the participating institutions</inlineHelpText>
    <label>Undertakings from all the participating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>