force-app/main/default/objects/Grants__c/fields/Undertakings_from_PIs_signed_off_by_all__c.field-meta.xml
<CustomField>
    <fullName>Undertakings_from_PIs_signed_off_by_all__c</fullName>
    <inlineHelpText>Undertakings from PIs signed off by all the participating PIs (PIs and co-PIs)</inlineHelpText>
    <label>Undertakings from PIs signed off by all</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>