force-app/main/default/objects/Grants__c/fields/Use_of_animal_stem_cells__c.field-meta.xml
<CustomField>
    <fullName>Use_of_animal_stem_cells__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your proposal involve any of the following</inlineHelpText>
    <label>Use of animal stem cells</label>
    <type>Checkbox</type>
</CustomField>