force-app/main/default/objects/Grants__c/fields/Use_of_animal_tissue__c.field-meta.xml
<CustomField>
    <fullName>Use_of_animal_tissue__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does your proposal involve any of the following?</inlineHelpText>
    <label>Use of animal tissue</label>
    <type>Checkbox</type>
</CustomField>