force-app/main/default/objects/Grants__c/fields/Why_are_the_species_to_be_used__c.field-meta.xml
<CustomField>
    <fullName>Why_are_the_species_to_be_used__c</fullName>
    <inlineHelpText>Why are the species to be used the most appropriate? (Limit 250 words)</inlineHelpText>
    <label>Why are the species to be used ?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>