force-app/main/default/objects/Grants__c/fields/Why_is_animal_use_necessary__c.field-meta.xml
<CustomField>
    <fullName>Why_is_animal_use_necessary__c</fullName>
    <inlineHelpText>Are there other possible approaches? (Limit 200 words)</inlineHelpText>
    <label>Why is animal use necessary?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>