force-app/main/default/objects/Grants__c/fields/Will_Project_Require_National_Comittee__c.field-meta.xml
<CustomField>
    <fullName>Will_Project_Require_National_Comittee__c</fullName>
    <inlineHelpText>Provide details of source of stem cells and nature of experiments Please specify if the project has been reviewed/will be reviewed by IC-SCR/IEC and NAC-SCR? Also specify any other regulatory approvals that have been/will be obtained. 
(Limit 500 wor</inlineHelpText>
    <label>Will Project Require National Comittee</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>