force-app/main/default/objects/Grants__c/fields/Will_the_Proposed_research_generates__c.field-meta.xml
<CustomField>
    <fullName>Will_the_Proposed_research_generates__c</fullName>
    <inlineHelpText>Output data software, materials, or intellectual property that hold significant value as a resource for the wider research community? If yes, please provide your plan on managing and sharing it</inlineHelpText>
    <label>Will the Proposed research generates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>