force-app/main/default/objects/Grants__c/fields/Will_your_project_require_National__c.field-meta.xml
<CustomField>
    <fullName>Will_your_project_require_National__c</fullName>
    <inlineHelpText>Will your project require National Apex Committee for Stem Cell Research and Therapy (NAC-SCRT)? If yes, please provide:
•	Provide details of source of stem cells and nature of experiments.
•	Please specify if the project has been reviewed/will be</inlineHelpText>
    <label>Will your project require National</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>