force-app/main/default/objects/Grants__c/recordTypes/CRC.recordType-meta.xml
<RecordType>
    <fullName>CRC</fullName>
    <active>true</active>
    <label>Clinical/Public Health Research Centers(CRC)</label>
</RecordType>