force-app/main/default/objects/Grants__c/recordTypes/Team_Science_Grants_TSG.recordType-meta.xml
<RecordType>
    <fullName>Team_Science_Grants_TSG</fullName>
    <active>true</active>
    <label>Team Science Grants (TSG)</label>
</RecordType>