force-app/main/default/objects/Grants__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>3/1/2021 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>