force-app/main/default/objects/Grants__c/listViews/Copy_of_Submitted_TSG.listView-meta.xml
<ListView>
    <fullName>Copy_of_Submitted_TSG</fullName>
    <columns>NAME</columns>
    <columns>Reference_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Grants__c.Team_Science_Grants_TSG</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted - TSG</label>
</ListView>