force-app/main/default/objects/Grants__c/listViews/Submitted_CRC.listView-meta.xml
<ListView>
    <fullName>Submitted_CRC</fullName>
    <columns>NAME</columns>
    <columns>Reference_Number__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Grants__c.CRC</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted - CRC</label>
</ListView>